<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardViewBuilding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="2dp"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition"
    app:cardBackgroundColor="@color/colorGrey_primary"
    app:cardCornerRadius="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textviewBuildingName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:drawableStart="@drawable/ic_resource_money_24"
                android:drawableTint="@color/colorTextOn_Grey_primary"
                android:gravity="center_vertical"
                android:text="@string/buildingName"
                android:textColor="@color/colorTextOn_Grey_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewBuildingCount"
                app:layout_constraintHorizontal_weight=".30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewProductionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:drawableEnd="@drawable/ic_resource_build_material_24"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/productionAmount"
                android:textColor="@color/colorTextOn_Grey_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight=".50"
                app:layout_constraintStart_toEndOf="@+id/textViewBuildingCount"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarProduction"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/colorGreen_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewProductionValue"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductionValue" />

            <TextView
                android:id="@+id/textViewBuildingCount"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/buildingCount"
                android:textColor="@color/colorTextOn_Grey_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewProductionValue"
                app:layout_constraintHorizontal_weight=".20"
                app:layout_constraintStart_toEndOf="@+id/textviewBuildingName"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textViewCostResource1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@color/colorGrey_light"
                android:drawableStart="@drawable/ic_resource_build_material_24"
                android:drawableTint="@color/colorOrange"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/resource1"
                android:textColor="@color/colorTextOn_Grey_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewCostResource2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCostResource2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorGrey_light"
                android:drawableStart="@drawable/ic_resource_sun_24"
                android:drawableTint="@color/colorYellow"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/resource2"
                android:textColor="@color/colorTextOn_Grey_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewCostResource3"
                app:layout_constraintStart_toEndOf="@+id/textViewCostResource1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCostResource3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorGrey_light"
                android:drawableStart="@drawable/ic_resource_money_24"
                android:drawableTint="@color/colorPurple"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/resource3"
                android:textColor="@color/colorTextOn_Grey_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_buyBuilding"
                app:layout_constraintStart_toEndOf="@+id/textViewCostResource2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_buyBuilding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/colorGrey_background"
                android:text="@string/buy_building_text"
                android:textColor="@color/colorTextOn_Grey_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewCostResource3"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>